Added employee roll call to employee entity and junit test

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ local.properties
 .settings/
 .loadpath
 .recommenders
+.mvn/
+HELP.md
+mvnw
+mvnw.cmd
 
 # External tool builders
 .externalToolBuilders/
@@ -54,3 +58,4 @@ local.properties
 .cache-main
 .scala_dependencies
 .worksheet
+/target/
