--- a/pom.xml
+++ b/pom.xml
@@ -74,8 +74,19 @@
                <artifactId>lombok</artifactId>
                <scope>provided</scope>
         </dependency>
+	
+	 	<dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-databind</artifactId>
+    	</dependency>
+    	
+    	<dependency>
+		    <groupId>org.modelmapper</groupId>
+		    <artifactId>modelmapper</artifactId>
+		    <version>2.3.4</version>
+		</dependency>
 	</dependencies>
-
+	
 	<build>
 		<plugins>
 			<plugin>
