--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,17 @@
 		    <artifactId>modelmapper</artifactId>
 		    <version>2.3.4</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.hibernate.validator</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.glassfish</groupId>
+		    <artifactId>javax.el</artifactId>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
